tools/ebpf_loader/ebpf_dev_driver.h

/*
 * Copyright 2017 Yutaro Hayakawa
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#pragma once

#include "ebpf_driver.h"

typedef struct ebpf_dev_driver {
  EBPFDriver base;
  int ebpf_fd;
} EBPFDevDriver;

EBPFDevDriver* ebpf_dev_driver_create(void);
void ebpf_dev_driver_destroy(EBPFDevDriver *driver);